--- a/Core21_BenchApp/Views/Shared/_Layout.cshtml
+++ b/Core21_BenchApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Core21_BenchApp</title>
+    <title>@ViewData["Title"] - Bench Documentation</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -32,7 +32,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Component" asp-action="ComponentsList">List of Components</a></li>
+                    <li><a asp-area="" asp-controller="Campaign" asp-action="CampaignsList">List of Campaigns</a></li>
                 </ul>
             </div>
         </div>
