--- a/Core21_BenchApp/Views/Shared/_Layout.cshtml
+++ b/Core21_BenchApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Core21_BenchApp</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Bench Documentation</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -45,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - Core21_BenchApp</p>
+            <p>&copy; 2019 - Bench Documentation</p>
         </footer>
     </div>
 
