--- a/Core21_BenchApp/Views/Shared/_Layout.cshtml
+++ b/Core21_BenchApp/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Component" asp-action="ComponentsList">List of Components</a></li>
                     <li><a asp-area="" asp-controller="Campaign" asp-action="CampaignsList">List of Campaigns</a></li>
+                    <li><a asp-area="" asp-controller="Test" asp-action="TestsList">List of Tests</a></li>
                 </ul>
             </div>
         </div>
